--- a/src/pages/404.module.scss
+++ b/src/pages/404.module.scss
@@ -21,5 +21,4 @@
 .content {
   font-size: 1.125rem;
   padding: 8rem 0;
-  z-index: -1;
 }
